<resources>
	<string name="app_name">Intercom</string>


	<string name="basic_notification_channel_id" translatable="false">basic_channel</string>
	<string name="chat_notification_channel_id" translatable="false">chat_channel</string>

	<string name="default_notification_channel_name">Notifications</string>
	<string name="chat_notification_channel_name">Chat messages</string>

	<string name="contactlist_title">New Message</string>

	<string name="login_form_title">Authorization</string>
	<string name="signup_form_title">Registration</string>
	<string name="verification_form_title">Verification</string>
	<string name="resend_verification_code">send a new code</string>
	<string name="goto_sighup_button">I do not have an account</string>
	<string name="goto_login_button">I already have an account</string>
	<string name="login">Login</string>
	<string name="signup">Signup</string>
	<string name="enter">Enter</string>
	<string name="error">Error</string>
	<string name="success">Success</string>
	<string name="info">Info</string>
	<string name="icon">Icon</string>
	<string name="image">Image</string>
	
	<string name="auth_name">Name</string>
	<string name="auth_email">Email</string>
	<string name="auth_phone">Phone</string>
	<string name="auth_password">Password</string>
	<string name="auth_confirmpass">Confirm password</string>
	<string name="auth_code">Code</string>
	<string name="auth_phone_hint">+380XXXXXXXXX</string>
	<string name="enter_phone">Enter your phone number</string>

	<string name="default_empty_list_hint">The list is empty</string>
	<string name="chat_list_empty_hint">Your chat list is currently empty</string>
	<string name="create_chat_hint">Tap on the pencil to start a new chat</string>
	<string name="add_contact_hint">Tap on the pencil to start a new chat</string>

	<string name="chat_textfield_hint">Start typing text…</string>
	<string name="chat_cancel_audio_hint">Slide to cancel</string>

	<string name="auth_failure_msg">Auth failure. Check your login and password</string>
	<string name="auth_alert_unknown_msg">Some auth issue has occurred</string>
	<string name="auth_failed_msg">Some auth issue has occurred</string>
	<string name="auth_alert_no_creds_msg">Please, enter your login and password</string>
	<string name="auth_alert_no_login_msg">Please, enter your login</string>
	<string name="auth_alert_no_pass_msg">Please, enter your password</string>
	<string name="auth_alert_no_phone_msg">Please, enter your phone</string>
	<string name="auth_alert_no_name_msg">Please, enter your name</string>
	<string name="auth_alert_invalid_phone_msg">The phone number is incorrect</string>
	<string name="auth_alert_pass2_not_match_msg">Confirmation password doesn\'t match</string>
	<string name="verification_failure_msg">Verification failure. Check your code</string>

	<string name="alert_error_opening_chat">Failed to open chat. Try again later</string>
	<string name="alert_error_creating_chat">Failed to create chat. Try again later</string>
	<string name="alert_error_sync_contacts">Failed to sync contact list. Try again later</string>
	<string name="alert_error_attach_file">Failed to attach file</string>
	<string name="alert_error_set_photo">Failed to set photo</string>
	<string name="alert_error_no_gallery">Failed to open gallery</string>
	<string name="alert_error_no_file_explorer">Failed to open file explorer</string>
	<string name="alert_error_change_name">Failed to change the name</string>
	<string name="alert_error_invalid_name">Inavalid name</string>
	<string name="alert_error_change_user_status">Failed to change the status</string>
	<string name="alert_error_invalid_user_status">Inavalid status</string>
	<string name="alert_error_send_message">Failed to send message</string>
	<string name="alert_error_name_required">The name is required</string>
	<string name="alert_chat_undeletable">This chat is marked as undeletable</string>
	<string name="alert_message_undeletable">This message is marked as undeletable</string>
	<string name="alert_error_open_file">Failed to find an App to open the file</string>
	<string name="alert_error_attach_file_big">The file is too big. Corrent limit: 2 Mb</string>

	<string name="record">Record</string>
	<string name="stop">Stop</string>
	<string name="send">Send</string>
	<string name="attachment">Attachment</string>
	<string name="document">Document</string>
	<string name="gallery">Gallery</string>
	<string name="attachment_hint">[Attachment]</string>

	<string name="reply">Reply</string>
	<string name="cancel">Cancel</string>
	<string name="mark_as_read">Mark as Read</string>

	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="maybe">Maybe</string>
	<string name="ok">Ok</string>

	<string name="you">You</string>
	<string name="chat_notification_ticker">New message from %1$s</string>

	<string name="search">Search</string>
	<string name="settings">Settings</string>
	<string name="create_group_chat">Create Group</string>
	<string name="logout">Log out</string>

	<string name="account">Account</string>
	<string name="set_profile_photo">Set Profile Photo</string>
	<string name="bio">Bio</string>
	<string name="bio_explain">Add a few words about yourself</string>
	<string name="change_phone_explain">Tap to change phone number</string>

	<string name="username">Username</string>
	<string name="username_placeholder">Tap to enter your username…</string>
	<string name="dialog_edit_user_name_title">Enter New Name</string>
	<string name="dialog_edit_user_name_message">You can use <b>a-z</b>, <b>0-9</b> and underscores.\nMinimum length is <b>5</b> characters, maximum - <b>64</b></string>
	<string name="dialog_edit_user_name_hint">Your Name</string>

	<string name="status">Status</string>
	<string name="user_status_placeholder">Tap to enter your status…</string>
	<string name="dialog_edit_user_status_title">Enter New Status</string>
	<string name="dialog_edit_user_status_message">Maximum length is <b>64</b> characters</string>
	<string name="dialog_edit_user_status_hint">Your Status</string>

	<string name="create_group">Create Group</string>
	<string name="new_group">New Group</string>
	<string name="group_name_field_hint">Enter group name</string>
	<string name="member_count">%d member(s)</string>
	<string name="contacts">Contacts</string>
	<string name="add_contact">Add Contact</string>
	<string name="contact_count">%d contact(s)</string>
	<string name="group_empty_hint">No contacts selected</string>

	<string name="upload_finished">Upload finished</string>
	<string name="upload_failed">Upload failed</string>
	<string name="uploading">Uploading…</string>
	<string name="loading">Loading…</string>

	<string name="pin">Pin</string>
	<string name="unpin">Unpin</string>
	<string name="mute">Mute</string>
	<string name="unmute">Unmute</string>

	<string name="online">online</string>
	<string name="last_seen">last seen %s</string>

	<string name="delete">Delete</string>
	<string name="message_deleted">Message deleted</string>
	<string name="chat_deleted">Chat deleted</string>
	<string name="message_deleted_not">Failed to delete the message</string>
	<string name="chat_deleted_not">Failed to delete the chat</string>

	<string name="audio_call">Audio Call</string>
	<string name="call">Video Call</string>
	<string name="hangup">Hangup</string>
	<string name="answer">Answer</string>
	<string name="decline">Decline</string>
	<string name="warn_call_answer_no_perm">%s tried to call you but you\'ve rejected permission request</string>
	<string name="warn_call_offer_no_perm">You tried to call %s but didn\'t grant permissions</string>

	<string name="chat_details">Chat Details</string>
	<string name="participants">Participants</string>

	<string name="contact_detail">Contact Details</string>
	<string name="contact_phone">Contact Phone</string>
	<string name="not_specified">Not specified</string>
	<string name="open_chat">Open chat</string>

	<string name="text_copied">Text copied to clipboard</string>

	<string name="broadcasts">Broadcasts</string>
	<string name="create_broadcast">Create Broadcast</string>
	<string name="new_broadcast">New Broadcast</string>
	<string name="broadcast_name_field_hint">Enter broadcast name</string>

	<string name="device_settings">Device settings</string>
	<string name="app_settings">App settings</string>
	<string name="notification_settings">Notifications and sounds</string>


	<string name="show_users">Show Users (Demo)</string>

	<string name="unknown">[unknown]</string>
</resources>
