<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
	<data>
		<variable
				name="viewModel"
				type="com.ancientlore.intercom.ui.auth.email.signup.EmailSignupViewModel"/>
	</data>
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clickable="true"
			android:background="@android:color/white"
	>
		<TextView
				android:text="@string/signup_form_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/titleView"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toTopOf="@+id/nameField"
				app:layout_constraintVertical_chainStyle="spread"
				style="@style/authTitle"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:ems="10"
				android:id="@+id/nameField"
				android:text="@={viewModel.nameField}"
				app:layout_constraintTop_toBottomOf="@+id/titleView"
				app:layout_constraintBottom_toTopOf="@+id/emailField"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:hint="@string/auth_name"
				style="@style/authField"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:ems="10"
				android:id="@+id/emailField"
				android:hint="@string/auth_email"
				android:text="@={viewModel.emailField}"
				app:layout_constraintTop_toBottomOf="@+id/nameField"
				app:layout_constraintBottom_toTopOf="@+id/phoneField"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				style="@style/authField"
		/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="phone"
				android:ems="10"
				android:id="@+id/phoneField"
				app:layout_constraintTop_toBottomOf="@+id/emailField"
				app:layout_constraintBottom_toTopOf="@+id/passField"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:hint="@string/auth_phone"
				style="@style/authField"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:ems="10"
				android:id="@+id/passField"
				android:text="@={viewModel.passField}"
				app:layout_constraintTop_toBottomOf="@+id/phoneField"
				app:layout_constraintBottom_toTopOf="@+id/confirmField"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:hint="@string/auth_password"
				style="@style/authField"/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:ems="10"
				android:id="@+id/confirmField"
				android:text="@={viewModel.confirmField}"
				app:layout_constraintTop_toBottomOf="@+id/passField"
				app:layout_constraintBottom_toTopOf="@+id/signupButton"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:hint="@string/auth_confirmpass"
				style="@style/authField"/>
		<TextView
				android:text="@string/goto_login_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/signupButton"
				app:layout_constraintTop_toBottomOf="@+id/confirmField"
				app:layout_constraintBottom_toTopOf="@+id/loginButton"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:onClick="@{() -> viewModel.onLoginClicked()}"
		/>
		<Button
				android:text="@string/signup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/loginButton"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/signupButton"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:onClick="@{() -> viewModel.onSignupClicked()}"
		/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>