<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools">

	<data>
		<variable
				name="ui"
				type="com.ancientlore.intercom.ui.settings.SettingsViewModel" />
	</data>

	<com.ancientlore.intercom.view.SwipableLayout
			android:id="@+id/swipableLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			tools:context=".ui.settings.SettingsFragment">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:background="@android:color/white"
				android:clickable="true">

			<com.google.android.material.appbar.AppBarLayout
					android:id="@+id/appbar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:theme="@style/AppTheme.AppBarOverlay">

				<androidx.appcompat.widget.Toolbar
						android:id="@+id/toolbar"
						android:layout_width="match_parent"
						android:layout_height="?attr/actionBarSize"
						android:background="?attr/colorPrimary"
						app:popupTheme="@style/AppTheme.PopupOverlay"
						app:title="@string/settings"
						tools:navigationIcon="@drawable/ic_nav_back" />

			</com.google.android.material.appbar.AppBarLayout>

			<ImageView
					android:id="@+id/iconView"
					android:layout_width="100dp"
					android:layout_height="100dp"
					android:layout_gravity="center"
					android:layout_marginTop="15dp"
					android:onClick="@{() -> ui.onUserIconClicked()}"
					android:src="@{ui.userIconField}"
					app:asCircle="@{true}"
					app:abbrText="@{ui.userNameField}"
					app:abbrSize="@{@dimen/settingsUserNameAbSize}"
					app:abbrTextColor="@{@android:color/white}"
					app:abbrBackColor="@{@color/colorPrimaryDark}"
					app:backgroundColor="@color/colorPrimaryDark"
					tools:backgroundColor="@color/colorPrimaryDark"
					tools:srcCompat="@drawable/ic_avatar"
					android:contentDescription="@string/icon"
					/>

			<TextView
					android:id="@+id/accountUserName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:gravity="center"
					android:textSize="20sp"
					android:textStyle="bold"
					android:textColor="@color/defaultTextColor"
					android:maxLines="1"
					android:singleLine="true"
					android:ellipsize="end"
					android:text="@{ui.userNameField}"
					android:onClick="@{() -> ui.onChangeUserNameClicked()}"
					tools:text="User Name" />

			<TextView
					android:id="@+id/accountSectionTitle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/account"
					style="@style/settingsSectionTitle" />

			<TextView
					android:id="@+id/changePhotoButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableStart="@drawable/ic_add_photo_24dp"
					android:drawableLeft="@drawable/ic_add_photo_24dp"
					android:text="@string/set_profile_photo"
					android:onClick="@{() -> ui.onSetProfilePhotoClicked()}"
					style="@style/settingsIconedTextItem" />

			<View
					android:layout_width="match_parent"
					style="@style/userSettingsItemDivider"
					/>

			<LinearLayout
					android:id="@+id/changeNameButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:background="?android:attr/selectableItemBackground"
					android:onClick="@{() -> ui.onChangeUserNameClicked()}">

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@{ui.userNameField}"
						android:hint="@string/username_placeholder"
						tools:text="User Name"
						style="@style/settingsDoubleTextItemUp" />

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/username"
						style="@style/settingsDoubleTextItemDown" />

			</LinearLayout>

			<View
					android:layout_width="match_parent"
					style="@style/userSettingsItemDivider"
					/>

			<LinearLayout
					android:id="@+id/changeStatusButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:background="?android:attr/selectableItemBackground"
					android:onClick="@{() -> ui.onChangeUserStatusClicked()}">

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@{ui.userStatusField}"
						android:hint="@string/user_status_placeholder"
						style="@style/settingsDoubleTextItemUp" />

				<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/status"
						style="@style/settingsDoubleTextItemDown" />

			</LinearLayout>

		</LinearLayout>

	</com.ancientlore.intercom.view.SwipableLayout>
</layout>