<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		>
	<data>
		<variable
				name="ui"
				type="com.ancientlore.intercom.ui.contact.detail.ContactDetailViewModel"/>
	</data>

	<com.ancientlore.intercom.view.SwipableLayout
			android:id="@+id/swipableLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:clickable="true"
				android:background="@android:color/white">

			<com.google.android.material.appbar.AppBarLayout
					android:id="@+id/appbar"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintBottom_toTopOf="@+id/contentLayout"
					android:theme="@style/AppTheme.AppBarOverlay">

				<androidx.appcompat.widget.Toolbar
						android:id="@+id/toolbar"
						android:layout_width="match_parent"
						android:layout_height="?attr/actionBarSize"
						android:background="?attr/colorPrimary"
						app:popupTheme="@style/AppTheme.PopupOverlay"
						app:title="@string/contact_detail"
						tools:navigationIcon="@drawable/ic_nav_back"
						/>

			</com.google.android.material.appbar.AppBarLayout>

			<ScrollView
					android:id="@+id/contentLayout"
					android:layout_width="match_parent"
					android:layout_height="0dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/appbar">

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

					<ImageView
							android:id="@+id/iconView"
							android:layout_width="100dp"
							android:layout_height="100dp"
							android:layout_gravity="center"
							android:layout_marginTop="15dp"
							android:onClick="@{() -> ui.onContactIconClicked()}"
							android:src="@{ui.contactIconField}"
							app:asCircle="@{true}"
							app:abbrText="@{ui.contactNameField}"
							app:placeholder="@{@drawable/ic_avatar_placeholder}"
							app:abbrSize="@{@dimen/settingsUserNameAbSize}"
							app:abbrTextColor="@{@android:color/white}"
							app:abbrBackColor="@{@color/colorPrimaryDark}"
							app:backgroundColor="@color/colorPrimaryDark"
							tools:backgroundColor="@color/colorPrimaryDark"
							tools:srcCompat="@drawable/ic_avatar"
							android:contentDescription="@string/icon"
							/>

					<TextView
							android:id="@+id/contactNameView"
							style="@style/onelineTextField"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:padding="10dp"
							android:text="@{ui.contactNameField}"
							android:textColor="@color/defaultTextColor"
							android:textSize="20sp"
							android:textStyle="bold"
							android:hint="@string/unknown"
							/>

					<TextView
							android:id="@+id/infoSectionTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/info"
							style="@style/settingsSectionTitle" />

					<LinearLayout
							android:id="@+id/contactPhoneButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="?android:attr/selectableItemBackground"
							android:onClick="@{() -> ui.onContactPhoneClicked()}"
							android:orientation="vertical">

						<TextView
								style="@style/settingsDoubleTextItemUp"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:hint="@string/contact_phone"
								android:text="@{ui.contactPhoneField}"
								tools:text="+ 38 066 871 45 32" />

						<TextView
								style="@style/settingsDoubleTextItemDown"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/auth_phone" />

					</LinearLayout>

					<LinearLayout
							android:id="@+id/contactEmailButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="?android:attr/selectableItemBackground"
							android:onClick="@{() -> ui.onContactEmailClicked()}"
							android:orientation="vertical"
							android:visibility="@{ui.userInfoLoaded}">

						<View
								style="@style/userSettingsItemDivider"
								android:layout_width="match_parent" />

						<TextView
								style="@style/settingsDoubleTextItemUp"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:hint="@string/not_specified"
								android:text="@{ui.contactEmailField}"
								/>

						<TextView
								style="@style/settingsDoubleTextItemDown"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/auth_email" />

					</LinearLayout>

					<LinearLayout
							android:id="@+id/contactStatusButton"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="?android:attr/selectableItemBackground"
							android:onClick="@{() -> ui.onContactStatusClicked()}"
							android:orientation="vertical"
							android:visibility="@{ui.userInfoLoaded}">

						<View
								style="@style/userSettingsItemDivider"
								android:layout_width="match_parent" />

						<TextView
								style="@style/settingsDoubleTextItemUp"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:hint="@string/not_specified"
								android:text="@{ui.contactStatusField}"
								/>

						<TextView
								style="@style/settingsDoubleTextItemDown"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/status" />

					</LinearLayout>

				</LinearLayout>
			</ScrollView>

			<com.google.android.material.floatingactionbutton.FloatingActionButton
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/floatingButtonIndent"
					android:onClick="@{() -> ui.onChatButtonClicked()}"
					android:tint="@android:color/white"
					app:srcCompat="@drawable/ic_message"
					app:backgroundTint="@android:color/holo_blue_light"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					android:contentDescription="@string/open_chat"
					/>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</com.ancientlore.intercom.view.SwipableLayout>
</layout>