<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto">
	<data>
		<import type="android.view.View" />
		<variable
				name="ui"
				type="com.ancientlore.intercom.ui.chat.creation.ChatCreationAdapter.HeaderViewHolder"/>
	</data>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>

		<TextView
				android:id="@+id/createGroupView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:text="@string/create_group"
				android:drawableStart="@drawable/ic_group_36dp"
				android:drawableLeft="@drawable/ic_group_36dp"
				app:drawableTint="@color/settingsItemTextColor"
				android:onClick="@{() -> ui.onClick()}"
				style="@style/settingsIconedTextItem" />

		<TextView
				android:id="@+id/createBroadcastView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:text="@string/create_broadcast"
				android:drawableStart="@drawable/ic_broadcast_36dp"
				android:drawableLeft="@drawable/ic_broadcast_36dp"
				app:drawableTint="@color/settingsItemTextColor"
				android:onClick="@{() -> ui.createBroadcastClick()}"
				style="@style/settingsIconedTextItem" />

		<TextView
				android:id="@+id/addContactView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:text="@string/add_contact"
				android:drawableStart="@drawable/ic_add_contact_36dp"
				android:drawableLeft="@drawable/ic_add_contact_36dp"
				app:drawableTint="@color/settingsItemTextColor"
				android:onClick="@{() -> ui.onAddContactClick()}"
				style="@style/settingsIconedTextItem" />

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/contacts"
				android:textColor="@color/settingsItemTextColor"
				android:textStyle="bold"
				android:textSize="14sp"
				android:paddingStart="20dp"
				android:paddingLeft="20dp"
				android:paddingTop="5dp"
				android:paddingBottom="5dp"
				android:background="#ddd"
				/>

	</LinearLayout>
</layout>