<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
	<data>
		<variable
				name="viewModel"
				type="com.ancientlore.intercom.ui.auth.phone.check.PhoneCheckViewModel"/>
	</data>
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clickable="true"
			android:background="@android:color/white"
	>
		<TextView
				android:text="@string/verification_form_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/titleView"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toTopOf="@+id/logoImageView"
				app:layout_constraintVertical_chainStyle="spread"
				style="@style/authTitle"
		/>
		<ImageView
				android:id="@+id/logoImageView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_splash_logo_80dp"
				app:layout_constraintTop_toBottomOf="@+id/titleView"
				app:layout_constraintBottom_toTopOf="@+id/codeField"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				/>
		<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="phone"
				android:ems="10"
				android:id="@+id/codeField"
				app:layout_constraintTop_toBottomOf="@+id/logoImageView"
				app:layout_constraintBottom_toTopOf="@+id/resendButton"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:hint="@string/auth_code"
				android:text="@={viewModel.codeField}"
				style="@style/authField"
		/>
		<TextView
				android:id="@+id/resendButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="15dp"
				android:text="@string/resend_verification_code"
				android:textColor="@color/colorPrimaryDark"
				android:onClick="@{() -> viewModel.onResendCodeClicked()}"
				app:layout_constraintTop_toBottomOf="@+id/codeField"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintBottom_toTopOf="@+id/enterButton"
				/>
		<Button
				android:text="@string/enter"
				android:layout_width="180dp"
				android:layout_height="60dp"
				android:id="@+id/enterButton"
				android:textColor="@android:color/white"
				android:backgroundTint="@color/colorPrimary"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/resendButton"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:onClick="@{() -> viewModel.onEnterClicked()}"
		/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>